cmake_minimum_required(VERSION 3.28)
project(CDLab)

set(CMAKE_CXX_STANDARD 14)

add_executable(CDLab
        "5th EXP Preditive Parser first follow"
        "ex12 indexed Asiignment machine code"
        "Exp 10 MIPS Assembly"
        "exp 2 lex"
        "Exp 3 Lex Scanner"
        "exp 4 bison"
        "exp 6 SLR"
        "exp 7 Java basic"
        "EXP 8 Syntax tree traversal"
        "Exp11 Machine Assembly ylang"
        "exp9 Intermediate code for if and while"
        "Left Factoring"
        "Left Recursion"
        README.md
        main.cpp)
